@@ -34,9 +34,9 @@
 
 # NOTE: Description of function appears below the relevant function.
 
-> 0x00	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x00	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x01	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x01	NULL	"null"	""	"null()"	0	{}	0	0	0
 
 > 0x02	NEXT	"next\t[%1], [%2], [%3], [%4], %5"	"\t\t\t;"	"next()"	10	{short,short,short,varoffset,offset}	0	0	0
 
@@ -47,19 +47,19 @@ TODO: To be done...
   stored in {varoffset} or 1 if it's a string or integer.
 * {offset} is the relative offset to jump to after the loop is completed.
 
-> 0x03	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x03	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x04	ASK	"ask\t%1"	"\t\t\t;"	"UcAsk;"	2	{offset}	0	0	0
+> 0x04	ASK	"ask\t%1"	""	"UcAsk;"	2	{offset}	0	0	0
 
 Display the Avatar's conversation options and ask for the user's input.
 It jumps to {offset} if there is no conversation answers available.
 
-> 0x05	JNE	"jne\t%1"	"\t\t\t;"	"if(!%p1) goto labelFunc_%1;"	2	{offset}	1	0	0
+> 0x05	JNE	"jne\t%1"	""	"if(!%p1) goto labelFunc_%1;"	2	{offset}	1	0	0
 
 Pops a value from the stack, tests if it's false, if it's false jumps to
 the relative {offset}.
 
-> 0x06	JMP	"jmp\t%1"	"\t\t\t;"	"goto labelFunc_%1;"	2	{offset}	0	0	0
+> 0x06	JMP	"jmp\t%1"	""	"goto labelFunc_%1;"	2	{offset}	0	0	0
 
 Jumps to the relative {offset} provided.
 
@@ -71,52 +71,52 @@ else continue as normal.
 NOTE: only do this comparing if we haven't found a correct answer on
 any of the previous CMPSs since the last ASK.
 
-> 0x08	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x08	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x09	ADD	"add"	"\t\t\t\t;"	"(%p2 + %p1)"	0	{}	2	1	0
+> 0x09	ADD	"add"	""	"(%p2 + %p1)"	0	{}	2	1	0
 
 Pops two values from the stack (pop v2, then pop v1), adds them together
 (v1 + v2), and then pushes the result on the stack. Integers are added,
 strings are concatenated, collections are appended.
 
-> 0x0A	SUB	"sub"	"\t\t\t\t;"	"(%p2 - %p1)"	0	{}	2	1	0
+> 0x0A	SUB	"sub"	""	"(%p2 - %p1)"	0	{}	2	1	0
 
 Pops two values from the stack (pop v2, then pop v1), subtracts them
 from each other (v1 - v2) then pushes the result to the stack. Only works
 with integers.
 
-> 0x0B	DIV	"div"	"\t\t\t\t;"	"(%p2 / %p1)"	0	{}	2	1	0
+> 0x0B	DIV	"div"	""	"(%p2 / %p1)"	0	{}	2	1	0
 
 Pops two values from the stack (pop v2, then pop v1), divides v1 by v2
 (v1 / v2), then pushes the result to the stack. Only works with integers.
 
-> 0x0C	MUL	"mul"	"\t\t\t\t;"	"(%p2 * %p1)"	0	{}	2	1	0
+> 0x0C	MUL	"mul"	""	"(%p2 * %p1)"	0	{}	2	1	0
 
 Pops two elements from the stack, multiplies them and pushes them back on
 the stack (multiplication is commutative). Only works with integers.
 
-> 0x0D	MOD	"mod"	"\t\t\t\t;"	"(%p2 %% %p1)"	0	{}	2	1	0
+> 0x0D	MOD	"mod"	""	"(%p2 %% %p1)"	0	{}	2	1	0
 
 Pops two elements from the stack (pop v2, then pop v1), mods v1 by v2
 (v1 % v2), then pushes the result on the stack. Only works with integers.
 
-> 0x0E	AND	"and"	"\t\t\t\t;"	"(%p2 && %p1)"	0	{}	2	1	0
+> 0x0E	AND	"and"	""	"(%p2 && %p1)"	0	{}	2	1	0
 
 Pops two elements from the stack, converts them to true/false, logically
 "and"s the values, and pushes the resulting truth value back on the stack
 as a 1/0(true/false).
 
-> 0x0F	OR	"or"	"\t\t\t\t;"	"(%p2 || %p1)"	0	{}	2	1	0
+> 0x0F	OR	"or"	""	"(%p2 || %p1)"	0	{}	2	1	0
 
 The "logical or" counterpart the the "logical and" (opcode 0x0E). Refer to
 that opcode for more information.
 
-> 0x10	NOT	"not"	"\t\t\t\t;"	"(!%p1)"	0	{}	1	1	0
+> 0x10	NOT	"not"	""	"(!%p1)"	0	{}	1	1	0
 
 Pops one element from the stack converts it to a truth value, logically "not"s
 it, and then pushes the resulting truth value on the stack.
 
-> 0x11	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x11	NULL	"null"	""	"null()"	0	{}	0	0	0
 
 > 0x12	POP	"pop\t[%1]"	"\t\t\t;"	"var%1 = %p1"	2	{varoffset}	1	0	0
 
@@ -124,39 +124,39 @@ Pops one element from the stack and assigns it to the local varitable pointed
 to by {varoffset}.
 MENTAL NOTE: assert(varoffset>=0 && varoffset<num_local_variables);
 
-> 0x13	PUSHT	"push\ttrue"	"\t\t\t;"	"true"	0	{}	0	1	0
+> 0x13	PUSHT	"push\ttrue"	""	"true"	0	{}	0	1	0
 
 Pushes true onto the stack.
 
-> 0x14	PUSHF	"push\tfalse"	"\t\t\t;"	"false"	0	{}	0	1	0
+> 0x14	PUSHF	"push\tfalse"	""	"false"	0	{}	0	1	0
 
 Pushes false onto the stack.
 
-> 0x15	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x15	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x16	CMPGT	"cmpgt"	"\t\t\t\t;"	"(%p2 > %p1)"	0	{}	2	1	0
+> 0x16	CMPGT	"cmpgt"	""	"(%p2 > %p1)"	0	{}	2	1	0
 
 Pops two values from the stack (pop v2, then pop v1), perform the logical
 comparison "greater then" on them (v1 > v2), and push the resultant truth
 value back on the stack. Only works with integers.
 
-> 0x17	CMPLT	"cmplt"	"\t\t\t\t;"	"(%p2 < %p1)"	0	{}	2	1	0
+> 0x17	CMPLT	"cmplt"	""	"(%p2 < %p1)"	0	{}	2	1	0
 
 As CMPGT, except using the "less than" comparison (<).
 
-> 0x18	CMPGE	"cmpge"	"\t\t\t\t;"	"(%p2 >= %p1)"	0	{}	2	1	0
+> 0x18	CMPGE	"cmpge"	""	"(%p2 >= %p1)"	0	{}	2	1	0
 
 As CMPGT, except using the "greater then or equal to" comparison (>=).
 
-> 0x19	CMPLE	"cmple"	"\t\t\t\t;"	"(%p2 <= %p1)"	0	{}	2	1	0
+> 0x19	CMPLE	"cmple"	""	"(%p2 <= %p1)"	0	{}	2	1	0
 
 As CMPLE, except using the "less then or equal to" comparison (<=).
 
-> 0x1A	CMPNE	"cmpne"	"\t\t\t\t;"	"(%p2 != %p1)"	0	{}	2	1	0
+> 0x1A	CMPNE	"cmpne"	""	"(%p2 != %p1)"	0	{}	2	1	0
 
 As CMPNE, except using the "not equal to" comparison (!=).
 
-> 0x1B	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x1B	NULL	"null"	""	"null()"	0	{}	0	0	0
 
 > 0x1C	ADDSI	"addsi\t%1H"	"\t\t\t; %t1"	"UcMessage(\"%t1\")"	2	{dataoffset}	0	0	0
 
@@ -178,18 +178,18 @@ appended to the stack.
 
 Pushes the element {short} to the stack as a signed 16bit integer.
 
-> 0x20	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x20	NULL	"null"	""	"null()"	0	{}	0	0	0
 
 > 0x21	PUSH	"push\t[%1]"	"\t\t\t;"	"var%1"	2	{varoffset}	0	1	0
 
 Pushes the variable stored at {varoffset} onto the stack.
 
-> 0x22	CMPEQ	"cmpeq"	"\t\t\t\t;"	"(%p1 == %p2)"	0	{}	2	1	0
+> 0x22	CMPEQ	"cmpeq"	""	"(%p1 == %p2)"	0	{}	2	1	0
 
 Pops two elements off the stack (pop v1, then pop v2), tests if they are equal,
 and pushes the resulting truth value on the stack.
 
-> 0x23	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x23	NULL	"null"	""	"null()"	0	{}	0	0	0
 
 > 0x24	CALL	"call\textern:[%1]"	"\t\t;"	"%f1(%p,)"	2	{extoffset}	0	0	1
 
@@ -198,7 +198,7 @@ References the "external usecode function table" (Exult code calls this
 (eg: external_table[extoffset]), then "calls" that function to continue
 execution.
 
-> 0x25	RET	"ret"	"\t\t\t\t;"	"return;"	0	{}	0	0	0
+> 0x25	RET	"ret"	""	"return;"	0	{}	0	0	0
 
 Returns to the "caller" function, after showing any text remaining in the
 string buffer (Exult: say_string() buffer). Does not return any elements
@@ -211,25 +211,25 @@ index of the local variable {varoffset}. (varoffset[v1]) The element obtained
 is then pushed onto the stack.
 TODO: NOTE: This opcode has been changed... need to redocument.
 
-> 0x27	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x27	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x28	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x28	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x29	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x29	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x2A	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x2A	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x2B	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x2B	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x2C	EXIT2	"exit2"	"\t\t\t\t;"	"exit2()"	0	{}	0	0	0
+> 0x2C	EXIT2	"exit2"	""	"exit2()"	0	{}	0	0	0
 
 Yet Another Return. Exult implements this identically to the RET opcode (0x25).
 
-> 0x2D	SETR	"setr"	"\t\t\t\t;"	"setr()"	0	{}	1	0	0
+> 0x2D	SETR	"setr"	""	"setr()"	0	{}	1	0	0
 
 Pops the top most element off the stack and stores it in the return register.
 
-> 0x2E	ENUM	"enum"	"\t\t\t\t;"	"enum()"	0	{}	0	0	0
+> 0x2E	ENUM	"enum"	""	"enum()"	0	{}	0	0	0
 
 Part one of the two opcode for...each opcode loop. Details under opcode 0x02.
 
@@ -253,25 +253,25 @@ function handling the 'audition' in Britain. Current implementation
 produces same result as original, although we're unsure of the exact
 function of this opcode.
 
-> 0x32	RTS	"rts"	"\t\t\t\t;"	"return rr;"	0	{}	0	0	0
+> 0x32	RTS	"rts"	""	"return rr;"	0	{}	0	0	0
 
 (ucdump calls this "retr")  Same as RET except pushes the return register
 onto the stack before returning.
 EXULT NOTE: unlike ret, it doesn't show any remaining text in the string
 buffer. Bug?
 
-> 0x33	SAY	"say"	"\t\t\t\t;"	"UcSay;"	0	{}	0	0	0
+> 0x33	SAY	"say"	""	"UcSay;"	0	{}	0	0	0
 
 Displays the string register to the screen (as appropriate talk, sign, scroll,
 book, whatever). Has the side effect of clearing the string register.
 
-> 0x34	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x34	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x35	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x35	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x36	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x36	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x37	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x37	NULL	"null"	""	"null()"	0	{}	0	0	0
 
 > 0x38	CALLIS	"callis\t%i1@%b2"	"\t\t; %1"	"callis(%1, %p,)"	3	{short,byte}	0xFE 1	0
 
@@ -289,31 +289,31 @@ The intrinsic called also has the same "event" flag as the caller function.
 
 Same as opcode CALLIS (0x38), except no return value.
 
-> 0x3A	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x3A	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x3B	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x3B	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x3C	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x3C	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x3D	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x3D	NULL	"null"	""	"null()"	0	{}	0	0	0
 
-> 0x3E	PUSHITM	"pushitm"	"\t\t\t\t;"	"pushitm()"	0	{}	0	1	0
+> 0x3E	PUSHITM	"push\titemref"	"\t\t\t;"	"pushitm()"	0	{}	0	1	0
 
 (ucdump & exult call this "push itemref") Pushes the identifier of the item
 (for which the usecode event handler is called) onto the stack.
 
-> 0x3F	ABRT	"abrt"	"\t\t\t\t;"	"abrt()"	0	{}	0	0	0
+> 0x3F	ABRT	"abrt"	""	"abrt()"	0	{}	0	0	0
 
 (ucdump calles this "exit") (exult says this is "really like a throw") Shows
 any text in the string register, and exits the function immediatly.
 TODO: Does it exit just this function, or all the called functions as well?
 
-> 0x40 END_CONV "end_conv" "\t\t\t;"	"end_conv()"	0 {}	0	0	0
+> 0x40 END_CONV "end_conv" ""	"end_conv()"	0 {}	0	0	0
 
 Always seems to be called right before a "goodbye", so guessing
 it means 'end conversation'.
 
-> 0x41	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x41	NULL	"null"	""	"null()"	0	{}	0	0	0
 
 > 0x42	PUSHF	"pushf\tflag:[%1]"	"\t\t\t;"	"UcFlag[%1]"	2	{flag}	0	1	0
 
@@ -328,7 +328,7 @@ TODO: document
 (ucdump calls this "pushbi")
 TODO: document
 
-> 0x45	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x45	NULL	"null"	""	"null()"	0	{}	0	0	0
 
 > 0x46	APUT	"aput\t[%1]"	"\t\t\t;"	"aput()"	2	{varoffset}	0	0	0
 
@@ -341,19 +341,19 @@ TODO: document
 {short} == usecode function number to call
 TODO: document
 
-> 0x48	PUSHEID	"push\teventid"	"\t\t\t;"	"UcEvent"	0	{}	0	1	0
+> 0x48	PUSHEID	"push\teventid"	""	"UcEvent"	0	{}	0	1	0
 
 (ucdump & exult calles this "push eventid")
 TODO: document
 
-> 0x49	NULL	"null"	"\t\t\t;"	"null()"	0	{}	0	0	0
+> 0x49	NULL	"null"	""	"null()"	0	{}	0	0	0
 
 > 0x4a	ARRA	"arra"	"\t\t\t\t;"	"arra()"	0	{}	0	0	0
 
 # TODO: Needs more documenting, need to find the pop/push numbers.
 TODO: document
 
-> 0x4b	POPEID	"pop\teventid"	"\t\t\t;"	"popeid()"	0	{}	1	0	0
+> 0x4b	POPEID	"pop\teventid"	""	"popeid()"	0	{}	1	0	0
 
 # TODO: Needs more documenting, need to find the pop/push numbers.
 (ucdump & exult calls this "pop eventid")
